--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,5 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation "androidx.recyclerview:recyclerview:1.2.0" // 리사이클 뷰 api 추가
     implementation "androidx.cardview:cardview:1.0.0" // 카드뷰 api 추가
+    implementation "com.prolificinteractive:material-calendarview:1.4.3"
 }
