--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,5 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.2.0" // 리사이클 뷰 api 추가
     implementation "androidx.cardview:cardview:1.0.0" // 카드뷰 api 추가
     implementation "com.prolificinteractive:material-calendarview:1.4.3"
+    implementation "com.google.android.material:material:1.2.0-alpha05"
 }
