--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,14 @@ android {
     dataBinding {
         enabled = true
     }
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'x86_64', 'armeabi-v7a', 'armeabi'
+            universalApk false
+        }
+    }
 }
 dependencies {
     def nav_version = "2.3.5"
