--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,5 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0" // 카드뷰 api 추가
     implementation "com.prolificinteractive:material-calendarview:1.4.3"
     implementation "com.google.android.material:material:1.2.0-alpha05"
+    implementation "com.google.android.material:material:1.3.0-alpha03"
 }
