--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,6 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.2.0" // 리사이클 뷰 api 추가
     implementation "androidx.cardview:cardview:1.0.0" // 카드뷰 api 추가
     implementation "com.prolificinteractive:material-calendarview:1.4.3"
-    implementation "com.google.android.material:material:1.2.0-alpha05"
-    implementation "com.google.android.material:material:1.3.0-alpha03"
+    implementation "com.google.android.material:material:1.3.0-alpha03" // material 사용
+    implementation 'com.google.android.gms:play-services-vision:11.6.2' // qr 인식
 }
