--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'kotlin-android-extensions'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -72,5 +73,8 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0" // 카드뷰 api 추가
     implementation "com.prolificinteractive:material-calendarview:1.4.3"
     implementation "com.google.android.material:material:1.3.0-alpha03" // material 사용
-    implementation 'com.google.android.gms:play-services-vision:11.6.2' // qr 인식
+    implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar' // barcode 인식
+    implementation 'com.google.zxing:core:3.2.1'
+    implementation 'androidx.activity:activity-ktx:1.2.0-alpha04'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0-alpha04'
 }
