Test for parcelize

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'kotlin-android-extensions'
     id 'com.google.gms.google-services'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -47,6 +47,7 @@ android {
             universalApk false
         }
     }
+
 }
 dependencies {
     def nav_version = "2.3.5"
