--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,8 @@ dependencies {
     implementation 'com.google.zxing:core:3.2.1'
     implementation 'androidx.activity:activity-ktx:1.2.0-alpha04'
     implementation 'androidx.fragment:fragment-ktx:1.3.0-alpha04'
+    // for database
+    implementation "androidx.room:room-runtime:2.2.5"
+    kapt "androidx.room:room-compiler:2.2.5"
+    kaptTest "android.arch.persistence.room:testing:2.2.5"
 }
